Add DaisyUi and more pages

--- a/src/app.html
+++ b/src/app.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="de">
+<html lang="de" data-theme="dracula">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -10,7 +10,7 @@
     <title>Patrice Wietmaier</title>
 
     <link rel="icon" href="%sveltekit.assets%/favicon.png" />
-    <link href="%sveltekit.assets%/fontawesome/css/all.css" rel="stylesheet">
+    <link href="%sveltekit.assets%/fontawesome/css/all.css" rel="stylesheet" />
 
     %sveltekit.head%
   </head>
