Add home layout

--- a/src/app.html
+++ b/src/app.html
@@ -3,8 +3,14 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="keywords" content="Patrice Wietmaier, Wietmaier, Patrice, Osnabrück, Informatik" />
-    <meta name="description" content="Hier könnte Ihre Werbung stehen" />
+    <meta
+      name="keywords"
+      content="Patrice Wietmaier, Wietmaier, Patrice, Osnabrück, Informatik, Developer, Full Stack, Backend, Programmierer, Symfony, basecom"
+    />
+    <meta
+      name="description"
+      content="Hey! Ich bin Patrice, Full Stack Web Developer aus Osnabrück. Hier möchte ich mich und einige meiner Projekte vorstellen."
+    />
     <meta name="author" content="Patrice Wietmaier" />
 
     <title>Patrice Wietmaier</title>
