--- a/src/app.html
+++ b/src/app.html
@@ -10,7 +10,7 @@
 
     %sveltekit.head%
   </head>
-  <body data-sveltekit-preload-data="hover">
+  <body class="fixed-height" data-sveltekit-preload-data="hover">
     <div style="display: contents">%sveltekit.body%</div>
   </body>
 </html>
